consume new lotus storage miner (#36)
* incorporate lotus improvements

* goimports

* golint

* errcheck

* final linting pass

* go mod tidy

* revert linter execution modification

* drop AllocatePiece

* fix data race

can't add a sector to the StateGroup before existing sectors have been restarted

* rename constructor

* rename constructor to convey intent

* increment wait group when stopping Sealing to ensure its run when/if restarted

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -24,6 +24,26 @@ issues:
 
   exclude-use-default: false
   exclude-rules:
+    - path: "fsm_test.go"
+      linters:
+        - govet
+        - staticcheck
+        - structcheck
+    - path: "lib/statemachine/group.go"
+      linters:
+        - golint
+    - path: "sector_states.go"
+      linters:
+        - golint
+    - path: "lib/statemachine/machine.go"
+      linters:
+        - golint
+    - path: "cbor_gen.go"
+      linters:
+        - unconvert
+    - path: "lib/statemachine/machine_test.go"
+      linters:
+        - errcheck
     - path: node/modules/lp2p
       linters:
         - golint
